--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "gulp-sass": "~3.1.0",
     "gulp-sourcemaps": "~2.4.0",
     "gulp-svg-sprite": "~1.3.1",
-    "gulp-svgmin": "~1.2.2",
-    "jquery": "~3.1.1"
+    "gulp-svgmin": "~1.2.2"
   },
   "dependencies": {
-    "normalize.css": "~5.0.0"
+    "normalize.css": "~5.0.0",
+    "jquery": "~3.1.1"
   }
 }
