--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "del": "~2.2.2",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "~3.1.1",
+    "gulp-cache": "^0.4.6",
     "gulp-cheerio": "~0.6.2",
     "gulp-concat": "~2.6.1",
     "gulp-concat-css": "~2.3.0",
     "gulp-csso": "~2.0.0",
     "gulp-eslint": "~3.0.1",
+    "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^3.2.0",
     "gulp-load-plugins": "~1.5.0",
     "gulp-notify": "~3.0.0",
     "gulp-pug": "~3.2.0",
@@ -21,10 +24,11 @@
     "gulp-sass": "~3.1.0",
     "gulp-sourcemaps": "~2.4.0",
     "gulp-svg-sprite": "~1.3.1",
-    "gulp-svgmin": "~1.2.2"
+    "gulp-svgmin": "~1.2.2",
+    "gulp.spritesmith": "^6.4.0"
   },
   "dependencies": {
-    "normalize.css": "~5.0.0",
-    "jquery": "~3.1.1"
+    "jquery": "~3.1.1",
+    "normalize.css": "~5.0.0"
   }
 }
