--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "gulp-autoprefixer": "~3.1.1",
     "gulp-cache": "^0.4.6",
     "gulp-cheerio": "~0.6.2",
-    "gulp-concat": "~2.6.1",
+    "gulp-concat": "^2.6.1",
     "gulp-concat-css": "~2.3.0",
     "gulp-csso": "~2.0.0",
     "gulp-eslint": "~3.0.1",
@@ -20,6 +20,7 @@
     "gulp-load-plugins": "~1.5.0",
     "gulp-notify": "~3.0.0",
     "gulp-pug": "~3.2.0",
+    "gulp-rename": "^1.2.2",
     "gulp-replace": "~0.5.4",
     "gulp-sass": "~3.1.0",
     "gulp-sourcemaps": "~2.4.0",
